crates/diffo-app/src/explorer/snapshots/diffo_app__explorer__worker__tests__conflict_lines_use_the_conflict_marker.snap
---
source: crates/diffo-app/src/explorer/worker.rs
expression: markers
---
[
    (
        1,
        Conflict,
    ),
    (
        3,
        Conflict,
    ),
    (
        5,
        Conflict,
    ),
]
