crates/diffo-app/src/explorer/snapshots/diffo_app__explorer__worker__tests__deleted_file_uses_old_line_numbers.snap
---
source: crates/diffo-app/src/explorer/worker.rs
expression: markers
---
[
    (
        1,
        Deleted,
    ),
    (
        2,
        Deleted,
    ),
]
