crates/diffo-app/src/explorer/snapshots/diffo_app__explorer__worker__tests__maps_added_modified_and_deleted_lines_to_file_numbers.snap
---
source: crates/diffo-app/src/explorer/worker.rs
expression: markers
---
[
    (
        2,
        Modified,
    ),
    (
        3,
        Deleted,
    ),
    (
        4,
        Added,
    ),
]
