crates/diffo-app/src/explorer/snapshots/diffo_app__explorer__worker__tests__viewer_content_cannot_emit_terminal_control_sequences.snap
---
source: crates/diffo-app/src/explorer/worker.rs
expression: viewer.lines
---
[
    "before    ␛[2J␈after",
]
